--- a/style/sass/style.scss
+++ b/style/sass/style.scss
@@ -1,5 +1,22 @@
 @import "./shashankastyle";
 
+.digital-clock-body{
+    width: fit-content;
+    background-color: rgb(63, 44, 44);
+    padding: 0.12em 0.5em;
+    border-radius: 5px;
+    div{
+        width: 3rem;
+        height: 2rem;
+        background-color: rgb(172, 119, 119);
+        margin: 0.5rem 0.3rem;
+        border-radius: 3px;
+        box-shadow: 0 0 10px 0 black;
+        font-weight: bold;
+        color:  rgb(63, 44, 44);
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    }
+}
 
 
 
